[ipxe] Add Bootentry list
Bootentry list with add/edit/delete functionality

--- a/modules-available/serversetup-bwlp/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/de/template-tags.json
@@ -1,14 +1,17 @@
 {
     "lang_active": "Aktiv",
+    "lang_addBootentry": "Booteintrag hinzufügen",
     "lang_addMenu": "Menü hinzufügen",
     "lang_bootAddress": "Boot-Adresse des Servers",
     "lang_bootBehavior": "Standard-Bootverhalten",
+    "lang_bootentryTitle": "Booteintrag",
     "lang_bootHint": "Das Bootmen\u00fc muss nach einer \u00c4nderung der IP-Adresse neu generiert werden. In der Regel geschieht dies automatisch, der Vorgang kann in der Sektion Bootmen\u00fc allerdings auch manuell ausgel\u00f6st werden.",
     "lang_bootInfo": "Hier k\u00f6nnen Anpassungen am Erscheinungsbild des Bootmen\u00fcs vorgenommen werden.",
     "lang_bootMenu": "Bootmen\u00fc",
     "lang_bootMenuCreate": "Bootmen\u00fc erzeugen",
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
     "lang_customEntry": "Eigener Eintrag",
+    "lang_bootentryDeleteConfirm": "Sind Sie sicher, dass Sie diesen Booteintrag löschen wollen?",
     "lang_menuDeleteConfirm": "Sind Sie sicher, dass Sie dieses Menü löschen wollen?",
     "lang_downloadImage": "USB-Image herunterladen",
     "lang_downloadRufus": "Rufus herunterladen",
