--- a/modules-available/serversetup-bwlp/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/en/template-tags.json
@@ -1,14 +1,17 @@
 {
     "lang_active": "Active",
+    "lang_addBootentry": "Add Bootentry",
     "lang_addMenu": "Add Menu",
     "lang_bootAddress": "Boot Address of the Server",
     "lang_bootBehavior": "Default Boot Behavior",
+    "lang_bootentryTitle": "Bootentry",
     "lang_bootHint": "The Boot menu must be recreated after changing the IP address. Usually this is done automatically, but the process can also be triggered manually in the section of the boot menu.",
     "lang_bootInfo": "Here adjustments can be made to the appearance of the boot menu.",
     "lang_bootMenu": "Boot Menu",
     "lang_bootMenuCreate": "Create Boot Menu",
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
     "lang_customEntry": "Custom entry",
+    "lang_bootentryDeleteConfirm": "Are you sure you want to delete this bootentry?",
     "lang_menuDeleteConfirm": "Are you sure you want to delete this menu?",
     "lang_downloadImage": "Download USB Image",
     "lang_downloadRufus": "Download Rufus",
