[inc/User] Fix access to Page if class is not loaded

--- a/modules-available/exams/lang/de/template-tags.json
+++ b/modules-available/exams/lang/de/template-tags.json
@@ -29,7 +29,7 @@
     "lang_headingMain": "bwLehrpool Pr\u00fcfungsmodus",
     "lang_id": "ID",
     "lang_lectureName": "Veranstaltungsname",
-    "lang_lectureOutOfRange": "Achtung: Start- bzw. Endzeitpunkt der Veranstaltung liegen au\u00dferhalb des oben angegebenen Zeitraums",
+    "lang_lectureOutOfRange": "Achtung: Der oben angegebene Zeitraum ist k\u00fcrzer als die Dauer der Veranstaltung",
     "lang_location": "Raum\/Ort",
     "lang_locationInfo": "W\u00e4hlen Sie hier die R\u00e4ume und Orte aus, die w\u00e4hrend des unten ausgew\u00e4hlten Zeitraums in den Pr\u00fcfungsmodus versetzt werden. Wenn sie hier keine Auswahl treffen, werden alle R\u00e4ume in den Pr\u00fcfungsmodus versetzt.",
     "lang_locations": "R\u00e4ume\/Orte",
