--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -76,7 +76,7 @@
     "lang_remoteSchedule": "Abruf Belegungsplan",
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
-    "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen",
+    "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen (bei Exchange die Postfachadresse)",
     "lang_roomupdateTooltip": "Zeit nach der die PCs aktualisiert werden (in Sekunden)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
