[locationinfo] apply design guidelines / table styling - move buttons to the right hand side - use modals for confirmation check - table styling/adjustment   -- add missing headers   -- remove text from buttons in table   -- center buttons / header-text - improve language-tags

--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -42,6 +42,7 @@
     "lang_locations": "Locations",
     "lang_locationsTable": "Rooms \/ Locations",
     "lang_locationsTableHints": "Here you can define opening times for your locations and link the location ID to a configured backend (e.g. HISinOne) to show calendar events.",
+    "lang_locsHint": "You can pick up the locations that will be shown in this panel.",
     "lang_longFri": "Friday",
     "lang_longMon": "Monday",
     "lang_longSat": "Saturday",
@@ -57,7 +58,7 @@
     "lang_modeTooltip": "The display modes the frontend supports",
     "lang_monTilFr": "Monday - Friday",
     "lang_nameTooltip": "Defines the name of the server",
-    "lang_noLocationsWarning": "Please select at least one location this panel should display",
+    "lang_noLocationsWarning": "Please select at least one location this panel should display.",
     "lang_noServer": "<no server>",
     "lang_openingTime": "Opening time",
     "lang_openingtimes": "Opening times",
