--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -42,6 +42,7 @@
     "lang_locations": "Orte",
     "lang_locationsTable": "R\u00e4ume \/ Orte",
     "lang_locationsTableHints": "Hier k\u00f6nnen Sie f\u00fcr die R\u00e4ume und Orte Ihrer Einrichtung \u00d6ffnungszeiten hinterlegen, sowie die Verkn\u00fcpfung mit Raum-IDs aus konfigurierten Backends (z.B. HISinOne) vornehmen, damit Belegungspl\u00e4ne abgerufen werden k\u00f6nnen.",
+    "lang_locsHint": "Hier k\u00f6nnen Sie die Orte ausw\u00e4hlen, die in diesem Panel angezeigt werden.",
     "lang_longFri": "Freitag",
     "lang_longMon": "Montag",
     "lang_longSat": "Samstag",
@@ -57,7 +58,7 @@
     "lang_modeTooltip": "Die Anzeigemodi, welche das Frontend unterst\u00fctzt",
     "lang_monTilFr": "Montag - Freitag",
     "lang_nameTooltip": "Legt den Namen des Servers fest",
-    "lang_noLocationsWarning": "Sie haben keine Orte f\u00fcr dieses Panel ausgew\u00e4hlt",
+    "lang_noLocationsWarning": "Bitte w\u00e4hlen Sie mindestens einen Ort aus, der vom Panel angezeigt werden soll.",
     "lang_noServer": "<Kein Server>",
     "lang_openingTime": "\u00d6ffnungszeit",
     "lang_openingtimes": "\u00d6ffnungszeiten",
