--- a/modules-available/adduser/lang/en/template-tags.json
+++ b/modules-available/adduser/lang/en/template-tags.json
@@ -15,7 +15,7 @@
     "lang_loginTooShort": "Login too short",
     "lang_name": "Name",
     "lang_passwordTooShort": "Password too short",
-    "lang_passwordsDontMatch": "Passwords don't match",
+    "lang_passwordsDontMatch": "Passwords do not match",
     "lang_phone": "Phone",
     "lang_role": "Role",
     "lang_userDeleteConfirm": "Do you want to delete this user?",
