--- a/modules-available/serversetup-bwlp/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/de/template-tags.json
@@ -1,24 +1,45 @@
 {
     "lang_active": "Aktiv",
-    "lang_addBootentry": "Booteintrag hinzufügen",
-    "lang_addMenu": "Menü hinzufügen",
+    "lang_add": "Hinzuf\u00fcgen",
+    "lang_addBootentry": "Booteintrag hinzuf\u00fcgen",
+    "lang_addMenu": "Men\u00fc hinzuf\u00fcgen",
+    "lang_archAgnostic": "Architekturunabh\u00e4ngig",
+    "lang_archBoth": "BIOS und EFI",
+    "lang_archSelector": "Architekturauswahl",
+    "lang_biosOnly": "Nur BIOS",
     "lang_bootAddress": "Boot-Adresse des Servers",
     "lang_bootBehavior": "Standard-Bootverhalten",
-    "lang_bootentryTitle": "Booteintrag",
+    "lang_bootEntryData": "Daten des Booteintrags",
     "lang_bootHint": "Das Bootmen\u00fc muss nach einer \u00c4nderung der IP-Adresse neu generiert werden. In der Regel geschieht dies automatisch, der Vorgang kann in der Sektion Bootmen\u00fc allerdings auch manuell ausgel\u00f6st werden.",
     "lang_bootInfo": "Hier k\u00f6nnen Anpassungen am Erscheinungsbild des Bootmen\u00fcs vorgenommen werden.",
     "lang_bootMenu": "Bootmen\u00fc",
     "lang_bootMenuCreate": "Bootmen\u00fc erzeugen",
+    "lang_bootentryDeleteConfirm": "Sind Sie sicher, dass Sie diesen Booteintrag l\u00f6schen wollen?",
+    "lang_bootentryTitle": "Booteintrag",
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
+    "lang_commandLine": "Command line",
     "lang_customEntry": "Eigener Eintrag",
-    "lang_bootentryDeleteConfirm": "Sind Sie sicher, dass Sie diesen Booteintrag löschen wollen?",
-    "lang_menuDeleteConfirm": "Sind Sie sicher, dass Sie dieses Menü löschen wollen?",
     "lang_downloadImage": "USB-Image herunterladen",
     "lang_downloadRufus": "Rufus herunterladen",
+    "lang_editBuiltinWarn": "Achtung! Sie bearbeiten einen der vorgegebenen Eintr\u00e4ge! Bei einem Update k\u00f6nnten Ihre \u00c4nderungen wieder \u00fcberschrieben werden",
+    "lang_editMenuHead": "Men\u00fc bearbeiten",
+    "lang_efiOnly": "Nur EFI",
+    "lang_entryChooserTitle": "Booteintrag ausw\u00e4hlen",
+    "lang_entryId": "ID",
+    "lang_entryTitle": "Bezeichnung",
     "lang_example": "Beispiel",
+    "lang_execAutoUnload": "Nach Ausf\u00fchrung entladen (--autofree)",
+    "lang_execReplace": "Aktuellen iPXE-Stack erstzen (--replace)",
+    "lang_execResetConsole": "Konsole vor Ausf\u00fchrung zur\u00fccksetzen",
+    "lang_forceRecompile": "Jetzt neu compilieren",
     "lang_generationFailed": "Erzeugen des Bootmen\u00fcs fehlgeschlagen. Der Netzwerkboot von bwLehrpool wird wahrscheinlich nicht funktionieren. Wenn Sie den Fehler nicht selbst beheben k\u00f6nnen, melden Sie bitte die Logausgabe an das bwLehrpool-Projekt.",
+    "lang_globalMenuWarning": "Dieses Men\u00fc ist keinem Raum zugeordnet",
+    "lang_hotkey": "Hotkey",
+    "lang_idFormatHint": "(Max. 16 Zeichen, nur a-z 0-9 - _)",
+    "lang_imageToLoad": "Zu ladendes Image (z.B. Kernel)",
+    "lang_initRd": "Zu ladendes initramfs",
     "lang_isDefault": "Standard",
-    "lang_listOfMenus": "Menüliste",
+    "lang_listOfMenus": "Men\u00fcliste",
     "lang_localHDD": "Lokale HDD",
     "lang_locationCount": "Anzahl Orte",
     "lang_masterPassword": "Master-Passwort",
@@ -27,13 +48,25 @@
     "lang_menuCustomHint1": "Hier haben Sie die M\u00f6glichkeit, eigenen Men\u00fc-Code zum angezeigten PXE-Men\u00fc hinzuzuf\u00fcgen, um z.B. auf weitere PXE-Server zu verweisen. Das Format entspricht dem syslinux Men\u00fcformat.",
     "lang_menuCustomHint2": "Sie k\u00f6nnen ein oder mehrere Eintr\u00e4ge erzeugen. Wenn Sie einen Eintrag erzeugen m\u00f6chten, der automatisch gestartet wird, wenn der Benutzer keine Auswahl t\u00e4tigt, vergeben Sie als",
     "lang_menuCustomHint3": "und w\u00e4hlen Sie als Standard-Bootverhalten ebenfalls custom.",
+    "lang_menuDeleteConfirm": "Sind Sie sicher, dass Sie dieses Men\u00fc l\u00f6schen wollen?",
     "lang_menuDisplayTime": "Anzeigedauer des Men\u00fcs",
     "lang_menuGeneration": "Erzeugen des Bootmen\u00fcs",
-    "lang_menuTitle": "Menü",
+    "lang_menuLocations": "Zugewiesene Orte",
+    "lang_menuTimeout": "Timeout",
+    "lang_menuTitle": "Men\u00fc",
     "lang_moduleHeading": "iPXE \/ Boot Menu",
+    "lang_newBootEntryHead": "Neuer Booteintrag",
+    "lang_newMenu": "Neues Men\u00fc",
+    "lang_none": "(keine)",
     "lang_pxeBuilt": "PXE-Binary gebaut",
+    "lang_recompileHint": "iPXE-Binaries jetzt neu kompilieren. Normalerweise wird dieser Vorgang bei \u00c4nderungen automatisch ausgef\u00fchrt. Sollten Bootprobleme auftreten, k\u00f6nnen Sie hier den Vorgang manuell ansto\u00dfen.",
+    "lang_scriptContent": "Script",
     "lang_seconds": "Sekunden",
     "lang_set": "Setzen",
+    "lang_spacer": "Abstandhalter\/\u00dcberschrift",
+    "lang_title": "Titel",
+    "lang_typeExecEntry": "Standardeintrag",
+    "lang_typeScriptEntry": "Benutzerdefiniertes Script",
     "lang_usbBuilt": "USB-Image gebaut",
     "lang_usbImage": "USB-Image",
     "lang_usbImgHelp": "Mit dem USB-Image k\u00f6nnen Sie einen bootbaren USB-Stick erstellen, \u00fcber den sich bwLehrpool an Rechnern starten l\u00e4sst, die keinen Netzwerkboot unterst\u00fctzen, bzw. f\u00fcr die keine entsprechende DHCP-Konfiguration vorhanden ist. Dies erfordert dann lediglich, dass in der BIOS-Konfiguration des Rechners USB-Boot zugelassen ist. Der Stick dient dabei lediglich als Einstiegspunkt; es ist nach wie vor ein bwLehrpool-Satellitenserver f\u00fcr den eigentlichen Bootvorgang von N\u00f6ten.",
