[dozmod] Add LDAP filter submodule

--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -3,6 +3,13 @@
     "delete-images": "L\u00f6schung: {{0}}",
     "dozmod-error": "Fehler bei der Kommunikation mit dem bwLehrpool-Suite server: {{0}}",
     "images-pending-delete-exist": "Zur L\u00f6schung markierte VM-Versionen: {{0}}",
+    "ldap-filter-created": "LDAP Filter wurde erfolgreich erstellt",
+    "ldap-filter-deleted": "LDAP Filter wurde erfolgreich gel\u00f6scht",
+    "ldap-invalid-filter-id": "Ung\u00fcltige LDAP Filter ID",
+    "ldap-filter-id-missing": "Fehlende LDAP Filter ID",
+    "ldap-filter-insert-failed": "LDAP filter konnte der Datenbank nicht hinzugef\u00fcgt werden",
+    "ldap-filter-save-missing-information": "Es fehlen LDAP Filter Informationen",
+    "ldap-filter-saved": "LDAP Filter wurde erfolgreich gespeichert",
     "mail-config-saved": "Mail-Konfiguration gespeichert",
     "no-expired-images": "Keine Abgelaufenen VM-Versionen",
     "nothing-submitted": "Es wurde nichts \u00fcbermittelt",
