--- a/modules-available/dozmod/lang/en/module.json
+++ b/modules-available/dozmod/lang/en/module.json
@@ -3,6 +3,7 @@
     "page_title": "Manage the bwLehrpool-Suite",
     "submenu_actionlog": "action log",
     "submenu_expiredimages": "Expired VM versions",
+    "submenu_ldapfilters": "LDAP filters",
     "submenu_mailconfig": "email configuration",
     "submenu_runtimeconfig": "limits and defaults",
     "submenu_templates": "templates",
