--- a/modules-available/dozmod/lang/de/module.json
+++ b/modules-available/dozmod/lang/de/module.json
@@ -3,6 +3,7 @@
     "page_title": "Verwalten der bwLehrpool-Suite",
     "submenu_actionlog": "Aktions-Log",
     "submenu_expiredimages": "Abgelaufene VM-Versionen",
+    "submenu_ldapfilters": "LDAP Filter",
     "submenu_mailconfig": "Email-Konfiguration",
     "submenu_runtimeconfig": "Limits und Standardwerte",
     "submenu_templates": "Textbausteine f\u00fcr E-Mails",
