--- a/modules-available/dozmod/lang/en/messages.json
+++ b/modules-available/dozmod/lang/en/messages.json
@@ -3,6 +3,12 @@
     "delete-images": "Delete: {{0}}",
     "dozmod-error": "Error communicating with the bwLehrpool-Suite server: {{0}}",
     "images-pending-delete-exist": "VMs marked for deletion: {{0}}",
+    "ldap-filter-created": "LDAP filter was successfully created",
+    "ldap-filter-deleted": "LDAP filter successfully deleted",
+    "ldap-invalid-filter-id": "Invalid LDAP filter id",
+    "ldap-filter-id-missing": "LDAP filter id was missing",
+    "ldap-filter-insert-failed": "LDAP filter could not be inserted into the database",
+    "ldap-filter-save-missing-information": "LDAP filter informations were missing",
     "mail-config-saved": "Mail config saved",
     "no-expired-images": "No expired VMs",
     "nothing-submitted": "There was nothing submitted",
