--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -1,8 +1,11 @@
 {
     "lang_actionTarget": "Aktionsziel",
+    "lang_active": "Aktiv",
+    "lang_addShare": "Netzlaufwerk hinzufügen",
     "lang_allowLoginByDefault": "Login standardm\u00e4\u00dfig erlauben",
     "lang_allowLoginDescription": "Wenn diese Option aktiviert ist, k\u00f6nnen sich alle Mitarbeiter der Einrichtung \u00fcber die bwLehrpool-Suite anmelden und VMs\/Veranstaltungen verwalten. Wenn Sie diese Option deaktivieren, m\u00fcssen Sie in der Untersektion \"Benutzer und Berechtigungen\" jeden Benutzer nach dem ersten Loginversuch manuell freischalten.",
     "lang_asteriskRequired": "Felder mit (*) sind erforderlich",
+    "lang_authMethod": "Authentifizierung",
     "lang_blockCount": "Anzahl Bl\u00f6cke",
     "lang_bwlehrpoolsuite": "bwLehrpool-Suite",
     "lang_canLoginOrganization": "Nutzer dieser Einrichtung k\u00f6nnen sich am Satelliten anmelden",
@@ -21,6 +24,7 @@
     "lang_descriptionRuntimeLimits": "Hier k\u00f6nnen Sie verschiedene Limits festlegen, z.B. wie lange eine VM nach dem Hochladen g\u00fcltig ist. Nach Ablauf dieses Zeitraums ist der Verantwortliche gezwungen, eine neue Version der VM hochzuladen. Damit k\u00f6nnen Sie das Ansammeln nicht mehr ben\u00f6tigter VMs eind\u00e4mmen. Weiterhin k\u00f6nnen Sie die maximale Anzahl gleichzeitiger Transfers pro Benutzer einschr\u00e4nken.\r\n\r\nVer\u00e4nderte Einstellungen wirken sich nicht auf bereits bestehende VMs aus.",
     "lang_description_delete_images": "Diese Liste zeigt VMs, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
     "lang_dozmodLogHeading": "bwLehrpool-Suite Aktionslog",
+    "lang_editNetworkshare": "Netzlaufwerk bearbeiten",
     "lang_email": "EMail",
     "lang_emailNotifications": "EMail-Benachrichtigungen aktiviert",
     "lang_error": "Fehler",
@@ -39,6 +43,7 @@
     "lang_lecturePermissionAdmin": "Administration",
     "lang_lecturePermissionEdit": "Bearbeiten",
     "lang_loadDefaults": "Alle Texte auf Auslieferungszustand zur\u00fccksetzen",
+    "lang_loggedInUser": "Angemeldeter Nutzer",
     "lang_mailConfig": "SMTP-Konfiguration zum Versenden von Mails",
     "lang_mailDescription": "F\u00fcllen Sie die folgenden Felder aus, wenn sie m\u00f6chten, dass Dozierende per Mail benachrichtigt werden, falls eine von ihnen genutzte oder erstellte VM oder Veranstaltung abl\u00e4uft. Um diese Funktion zu deaktivieren, lassen Sie eines der mit (*) gekennzeichneten Felder leer. Wenn das hier angegebene E-Mail-Konto nur zum Versenden von Mails genutzt wird, sollten Sie einen Auto-Responder einrichten f\u00fcr den Fall, dass ein Dozierender auf eine der automatisch generierten Mails antwortet (bzw. eine explizit angegebene Reply-To Adresse ignoriert).",
     "lang_mailTemplates": "E-Mail Templates",
@@ -48,11 +53,14 @@
     "lang_maxTransfers": "Maximale Zahl gleichzeitiger Up-\/Downloads pro Benutzer",
     "lang_miscOptions": "Verschiedene Einstellungen",
     "lang_modified": "Modifiziert",
+    "lang_name": "Name",
+    "lang_networkshares": "Netzlaufwerke",
     "lang_organization": "Einrichtung",
     "lang_organizationListHeader": "Nutzungsrechte f\u00fcr den Satelliten festlegen",
     "lang_os": "Betriebssystem",
     "lang_owner": "Besitzer",
     "lang_passwordplaceholder": "SMTP Passwort",
+    "lang_path": "Pfad",
     "lang_placeholders": "Platzhalter",
     "lang_port": "Port",
     "lang_reallyResetTemplates": "Sind Sie sicher, dass Sie alle Texte l\u00f6schen und auf die Standardwerte zur\u00fccksetzen wollen?",
@@ -61,15 +69,18 @@
     "lang_runtimeConfig": "Laufzeit-Konfiguration",
     "lang_runtimeConfigLimits": "Beschr\u00e4nkungen",
     "lang_senderAddress": "Absenderadresse",
+    "lang_shareDeleteConfirm": "Willst du dieses Netzlaufwerk wirklich l\u00f6schen?",
     "lang_senderName": "Absender Anzeigename",
     "lang_size": "Gr\u00f6\u00dfe",
     "lang_spaceWastedDuplication": "Potentiell durch mehrfach vorkommende Bl\u00f6cke belegter Speicherplatz",
+    "lang_specificUser": "Spezifischer Nutzer",
     "lang_ssl": "SSL-Modus",
     "lang_sslExplicit": "Explizites SSL (\"STARTTLS\")",
     "lang_sslImplicit": "Implizites SSL",
     "lang_sslNone": "Kein SSL",
     "lang_superUser": "Ist SuperUser (darf alle Veranstaltungen und VMs bearbeiten\/l\u00f6schen)",
     "lang_system": "System",
+    "lang_target": "Ziel",
     "lang_template": "Template",
     "lang_templatePageDescription": "Hier k\u00f6nnen Sie die Textbausteine bearbeiten, aus denen die Mails generiert werden, die der bwLehrpool-Server bez\u00fcglich Virtueller Maschinen und Veranstaltungen versendet. Diese Funktionalit\u00e4t unterst\u00fctzt zur Zeit keine Internationalisierung.",
     "lang_test": "Test-Mail senden",
