--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -1,8 +1,11 @@
 {
     "lang_actionTarget": "Action target",
+    "lang_active": "Active",
+    "lang_addShare": "Add Network Share",
     "lang_allowLoginByDefault": "Allow all staff members to login and use the bwLehrpool-Suite",
     "lang_allowLoginDescription": "If this option is enabled, all members of the organization marked as staff or employee are allowed to login to this server and manage VMs\/courses. Otherwise, new users need to be individually allowed access after their first login attempt by visiting the sub page \"users and permissions\" in this web interface.",
     "lang_asteriskRequired": "Fields marked with (*) are required",
+    "lang_authMethod": "Authentication",
     "lang_blockCount": "Block count",
     "lang_bwlehrpoolsuite": "bwLehrpool-Suite",
     "lang_canLoginOrganization": "Users from this organization can login",
@@ -21,6 +24,7 @@
     "lang_descriptionRuntimeLimits": "Here you can define some limits, e.g. how long a newly uploaded VM will be valid. This should make sure that you don't end up with a lot of old, unused VMs over time.\r\n\r\nModified settings won't apply for already existing VMs.",
     "lang_description_delete_images": "This is a list of VMs that either expired, or where the disk image is damaged or missing. These VMs are not available in bwLehrpool currently, but you have to manually confirm the deletion of the disk images for safety reasons (clock skew etc.)",
     "lang_dozmodLogHeading": "bwLehrpool-Suite action log",
+    "lang_editNetworkshare": "Edit Network Share",
     "lang_email": "E-Mail",
     "lang_emailNotifications": "E-Mail notifications enabled",
     "lang_error": "Error",
@@ -39,6 +43,7 @@
     "lang_lecturePermissionAdmin": "Administrate",
     "lang_lecturePermissionEdit": "Edit",
     "lang_loadDefaults": "Reset all templates to their defaults",
+    "lang_loggedInUser": "Logged in User",
     "lang_mailConfig": "SMTP configuration for sending mails",
     "lang_mailDescription": "Fill in the following fields if you want to notify tutors\/professors\/lecturers about expiring VMs and lectures. If you leave one of the required fields blank, the feature will be disabled.",
     "lang_mailTemplates": "E-Mail Templates",
@@ -48,11 +53,14 @@
     "lang_maxTransfers": "Max concurrent transfers per user",
     "lang_miscOptions": "Misc options",
     "lang_modified": "modified",
+    "lang_name": "Name",
+    "lang_networkshares": "Network Shares",
     "lang_organization": "Organization",
     "lang_organizationListHeader": "Set access permissions for organizations",
     "lang_os": "Operating System",
     "lang_owner": "Owner",
     "lang_passwordplaceholder": "SMTP Password",
+    "lang_path": "Path",
     "lang_placeholders": "Placeholders",
     "lang_port": "Port",
     "lang_reallyResetTemplates": "Are you sure you want to reset all texts to their default values?",
@@ -62,14 +70,17 @@
     "lang_runtimeConfigLimits": "Limitations",
     "lang_senderAddress": "Sender address",
     "lang_senderName": "Sender's display name",
+    "lang_shareDeleteConfirm": "Do you really want to delete this network share?",
     "lang_size": "Size",
     "lang_spaceWastedDuplication": "Potentially wasted space by duplicate blocks",
+    "lang_specificUser": "Specific User",
     "lang_ssl": "SSL mode",
     "lang_sslExplicit": "Explicit SSL (\"STARTTLS\")",
     "lang_sslImplicit": "Implicit SSL",
     "lang_sslNone": "No SSL",
     "lang_superUser": "Is super user (can edit\/delete all lectures and VMs)",
     "lang_system": "System",
+    "lang_target": "Target",
     "lang_template": "Template",
     "lang_templatePageDescription": "Here you can edit text fragments that are used to compose the information and reminder mails sent by the bwLehrpool server, e.g. when a lecture or VM is about to expire.",
     "lang_test": "Send test mail",
