--- a/modules-available/dozmod/lang/de/module.json
+++ b/modules-available/dozmod/lang/de/module.json
@@ -4,6 +4,7 @@
     "submenu_actionlog": "Aktions-Log",
     "submenu_expiredimages": "Abgelaufene VM-Versionen",
     "submenu_mailconfig": "Email-Konfiguration",
+    "submenu_networkshares": "Netzlaufwerke",
     "submenu_runtimeconfig": "Limits und Standardwerte",
     "submenu_templates": "Textbausteine f\u00fcr E-Mails",
     "submenu_users": "Benutzer und Berechtigungen"
