--- a/modules-available/dozmod/lang/de/permissions.json
+++ b/modules-available/dozmod/lang/de/permissions.json
@@ -2,6 +2,8 @@
     "actionlog.view": "Aktions-Log einsehen.",
     "expiredimages.delete": "Zur L\u00f6schung vorgemerkete Abbilder l\u00f6schen.",
     "mailconfig.save": "\u00c4nderungen an der SMTP-Konfiguration zum Versenden von Mails speichern.",
+    "networkshares.save": "Netzlaufwerke einsehen.",
+    "networkshares.view": "\u00c4nderungen an den Netzlaufwerken speichern.",
     "runtimeconfig.save": "\u00c4nderungen an der Laufzeit-Konfiguration speichern.",
     "templates.reset": "E-Mail Templates zur\u00fccksetzen.",
     "templates.save": "E-Mail Templates speichern.",
