--- a/modules-available/dozmod/lang/en/module.json
+++ b/modules-available/dozmod/lang/en/module.json
@@ -4,6 +4,7 @@
     "submenu_actionlog": "action log",
     "submenu_expiredimages": "Expired VM versions",
     "submenu_mailconfig": "email configuration",
+    "submenu_networkshares": "Network Shares",
     "submenu_runtimeconfig": "limits and defaults",
     "submenu_templates": "templates",
     "submenu_users": "users and permissions"
