--- a/modules-available/dozmod/lang/en/permissions.json
+++ b/modules-available/dozmod/lang/en/permissions.json
@@ -2,6 +2,8 @@
     "actionlog.view": "View action log.",
     "expiredimages.delete": "Delete images marked for deletion.",
     "mailconfig.save": "Save SMTP configuration for sending mails.",
+    "networkshares.save": "View network drives.",
+    "networkshares.view": "Save network drives.",
     "runtimeconfig.save": "Save limits and defaults of a runtime configuration.",
     "templates.reset": "Reset email templates.",
     "templates.save": "Save email templates.",
