[dozmod] Update translations

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -1,7 +1,7 @@
 {
     "lang_actionTarget": "Aktionsziel",
     "lang_active": "Aktiv",
-    "lang_addShare": "Netzlaufwerk hinzufügen",
+    "lang_addShare": "Netzlaufwerk hinzuf\u00fcgen",
     "lang_allowLoginByDefault": "Login standardm\u00e4\u00dfig erlauben",
     "lang_allowLoginDescription": "Wenn diese Option aktiviert ist, k\u00f6nnen sich alle Mitarbeiter der Einrichtung \u00fcber die bwLehrpool-Suite anmelden und VMs\/Veranstaltungen verwalten. Wenn Sie diese Option deaktivieren, m\u00fcssen Sie in der Untersektion \"Benutzer und Berechtigungen\" jeden Benutzer nach dem ersten Loginversuch manuell freischalten.",
     "lang_asteriskRequired": "Felder mit (*) sind erforderlich",
@@ -45,8 +45,9 @@
     "lang_ldapFilterDescription": "Dies sind die Filter, die ein Benutzer in der bwLehrpool-Suite Veranstaltungen hinzuf\u00fcgen kann.",
     "lang_ldapFilterEdit": "LDAP Filter bearbeiten",
     "lang_ldapFilterName": "Filtername",
-    "lang_ldapfilters": "LDAP Filter",
     "lang_ldapFilterValue": "Wert",
+    "lang_ldapfilters": "LDAP Filter",
+    "lang_ldapfiltersIntro": "Hier k\u00f6nnen Sie Vorgaben f\u00fcr die Veranstaltungsspezifischen LDAP-Filter machen. LDAP-Filter sind einfache Attributsfilter, die clientseitig Anwendung finden. Die hier definierten Filter werden in der bwLehrpool-Suite als Vorschl\u00e4ge aufgelistet und k\u00f6nnen mittels Checkbox aktiviert werden. Alternativ k\u00f6nnen in der bwLehrpool-Suite auch eigene Filter angelegt werden.",
     "lang_lecture": "Veranstaltung",
     "lang_lecturePermissionAdmin": "Administration",
     "lang_lecturePermissionEdit": "Bearbeiten",
@@ -63,6 +64,8 @@
     "lang_modified": "Modifiziert",
     "lang_name": "Name",
     "lang_networkshares": "Netzlaufwerke",
+    "lang_networksharesIntro": "Hier k\u00f6nnen Sie vordefinierte Netzlaufwerke anlegen, die den Nutzern der bwLehrpool-Suite zur Auswahl gestellt werden. Es ist den Nutzern der bwLehrpool-Suite weiterhin m\u00f6glich, komplett eigene Netzwerkfreigaben zu definieren. Die Angaben hier sollen lediglich das Hinzuf\u00fcgen h\u00e4ufig genutzter Laufwerke vereinfachen, bzw. das \u00c4ndern eines Netzwerkpfades vereinfachen, da in diesem Fall nur der Zentrale Eintrag hier angepasst werden muss, und nicht mehr wie zuvor jede Veranstaltung einzeln.",
+    "lang_none": "(Keiner)",
     "lang_organization": "Einrichtung",
     "lang_organizationListHeader": "Nutzungsrechte f\u00fcr den Satelliten festlegen",
     "lang_os": "Betriebssystem",
@@ -71,14 +74,15 @@
     "lang_path": "Pfad",
     "lang_placeholders": "Platzhalter",
     "lang_port": "Port",
+    "lang_printer": "Drucker",
     "lang_reallyResetTemplates": "Sind Sie sicher, dass Sie alle Texte l\u00f6schen und auf die Standardwerte zur\u00fccksetzen wollen?",
     "lang_replaceWithOriginal": "Originaltext in Textbox laden",
     "lang_replyTo": "Reply-To Adresse",
     "lang_runtimeConfig": "Laufzeit-Konfiguration",
     "lang_runtimeConfigLimits": "Beschr\u00e4nkungen",
     "lang_senderAddress": "Absenderadresse",
-    "lang_shareDeleteConfirm": "Willst du dieses Netzlaufwerk wirklich l\u00f6schen?",
     "lang_senderName": "Absender Anzeigename",
+    "lang_shareDeleteConfirm": "Willst du dieses Netzlaufwerk wirklich l\u00f6schen?",
     "lang_size": "Gr\u00f6\u00dfe",
     "lang_spaceWastedDuplication": "Potentiell durch mehrfach vorkommende Bl\u00f6cke belegter Speicherplatz",
     "lang_specificUser": "Spezifischer Nutzer",
