--- a/modules-available/dozmod/lang/en/messages.json
+++ b/modules-available/dozmod/lang/en/messages.json
@@ -5,12 +5,16 @@
     "images-pending-delete-exist": "VMs marked for deletion: {{0}}",
     "ldap-filter-created": "LDAP filter was successfully created",
     "ldap-filter-deleted": "LDAP filter successfully deleted",
-    "ldap-invalid-filter-id": "Invalid LDAP filter id",
     "ldap-filter-id-missing": "LDAP filter id was missing",
     "ldap-filter-insert-failed": "LDAP filter could not be inserted into the database",
-    "ldap-filter-save-missing-information": "LDAP filter informations were missing",
+    "ldap-filter-save-missing-information": "LDAP filter information is missing",
+    "ldap-filter-saved": "Successfully modified LDAP filter",
+    "ldap-invalid-filter-id": "Invalid LDAP filter id",
     "mail-config-saved": "Mail config saved",
     "networkshare-deleted": "Network share deleted",
+    "networkshare-invalid-auth-type": "Invalid auth type: {{0}}",
+    "networkshare-invalid-shareid": "Invalid share id: {{0}}",
+    "networkshare-missing-path": "Missing network path",
     "networkshare-saved": "Network share saved",
     "no-expired-images": "No expired VMs",
     "nothing-submitted": "There was nothing submitted",
