--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -45,8 +45,9 @@
     "lang_ldapFilterDescription": "These are the LDAP filters that can be applied to lectures in the bwLehrpool-Suite.",
     "lang_ldapFilterEdit": "Edit LDAP filter",
     "lang_ldapFilterName": "Filter name",
-    "lang_ldapfilters": "LDAP filters",
     "lang_ldapFilterValue": "Value",
+    "lang_ldapfilters": "LDAP filters",
+    "lang_ldapfiltersIntro": "This is the list of predefined lecture filters, based on LDAP attributes. These filters can be applied client side to only show lectures to specific user groups. These predefined filters are shown in the bwLehrpool-Suite when editing a lecture, and can be activated by a simple check box. Users of the bwLehrpool-Suite can either make use of these predefined filters, or add custom ones if desired.",
     "lang_lecture": "Lecture",
     "lang_lecturePermissionAdmin": "Administrate",
     "lang_lecturePermissionEdit": "Edit",
@@ -63,6 +64,8 @@
     "lang_modified": "modified",
     "lang_name": "Name",
     "lang_networkshares": "Network Shares",
+    "lang_networksharesIntro": "This is the list of predefined network shares. bwLehrpool-Suite users can still add custom network shares to their lectures, however having commonly used network shares as predefined entries should be much more convenient. Another advantage is that changing the path of a network share centrally avoids having to edit a dozen lectures' configuration manually.",
+    "lang_none": "(none)",
     "lang_organization": "Organization",
     "lang_organizationListHeader": "Set access permissions for organizations",
     "lang_os": "Operating System",
@@ -71,6 +74,7 @@
     "lang_path": "Path",
     "lang_placeholders": "Placeholders",
     "lang_port": "Port",
+    "lang_printer": "Printer",
     "lang_reallyResetTemplates": "Are you sure you want to reset all texts to their default values?",
     "lang_replaceWithOriginal": "load original text into text box",
     "lang_replyTo": "Reply-To address",
