--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -78,6 +78,7 @@
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
     "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen (bei Exchange die Postfachadresse)",
+    "lang_roomplanerTooltip": "Nur PCs berücksichtigen, die im Raumplaner gesetzt wurden",
     "lang_roomupdateTooltip": "Zeit nach der die PCs aktualisiert werden (in Sekunden)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
@@ -119,6 +120,7 @@
     "lang_url": "URL",
     "lang_urlPanel": "URL-Panel",
     "lang_urlTooltip": "URL die aufgerufen wird",
+    "lang_useRoomplaner": "Raumplaner benutzen",
     "lang_vertical": "Vertikaler Modus",
     "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen"
 }
