--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -78,7 +78,7 @@
     "lang_room": "Room",
     "lang_roomId": "Room ID",
     "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data (when using exchange the room mailbox)",
-    "lang_roomplanerTooltip": "Only consider PCs which were set in the roomplaner",
+    "lang_roomplannerTooltip": "Only consider PCs which were set in the roomplanner",
     "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
@@ -120,7 +120,7 @@
     "lang_url": "URL",
     "lang_urlPanel": "URL panel",
     "lang_urlTooltip": "URL which is shown by the panel",
-    "lang_useRoomplaner": "Use roomplans",
+    "lang_useRoomplanner": "Use roomplans",
     "lang_vertical": "Vertical mode",
     "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other"
 }
