[dozmod] Add editor for predefined run scripts
Assigning scripts to certain locations only is currently not possible.
Whether this is required is to be discussed, since predefined scripts
selectable by bwLehrpool-Suite users would almost cover this use case.

Refs #3145

--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -18,6 +18,8 @@
     "networkshare-saved": "Netzlaufwerk gespeichert",
     "no-expired-images": "Keine Abgelaufenen VM-Versionen",
     "nothing-submitted": "Es wurde nichts \u00fcbermittelt",
+    "runscript-invalid-id": "Ung\u00fcltige Script-ID: {{0}}",
+    "runscript-saved": "Script gespeichert",
     "runtimelimits-config-saved": "Einstellungen gespeichert",
     "templates-saved": "Templates wurden gespeichert",
     "timeout": "Zeit\u00fcberschreitung",
