--- a/modules-available/dozmod/lang/de/module.json
+++ b/modules-available/dozmod/lang/de/module.json
@@ -6,6 +6,7 @@
     "submenu_ldapfilters": "LDAP Filter",
     "submenu_mailconfig": "Email-Konfiguration",
     "submenu_networkshares": "Netzlaufwerke",
+    "submenu_runscripts": "Startscripte",
     "submenu_runtimeconfig": "Limits und Standardwerte",
     "submenu_templates": "Textbausteine f\u00fcr E-Mails",
     "submenu_users": "Benutzer und Berechtigungen"
