--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -25,6 +25,7 @@
     "lang_description_delete_images": "Diese Liste zeigt VMs, die entweder abgelaufen sind, oder deren Datei besch\u00e4digt, verschoben oder gel\u00f6scht wurde. Diese Images sind zur Zeit im Lehrpool nicht verf\u00fcgbar, ihre endg\u00fcltige L\u00f6schung muss aber manuell best\u00e4tigt werden, um gr\u00f6\u00dfere Katastrophen durch Softwarefehler, verstellte Systemuhren etc. zu vermeiden.",
     "lang_dozmodLogHeading": "bwLehrpool-Suite Aktionslog",
     "lang_editNetworkshare": "Netzlaufwerk bearbeiten",
+    "lang_editScript": "Startscript bearbeiten",
     "lang_email": "EMail",
     "lang_emailNotifications": "EMail-Benachrichtigungen aktiviert",
     "lang_error": "Fehler",
@@ -34,6 +35,7 @@
     "lang_hasNewer": "Neuere Version existiert",
     "lang_hash": "Hash",
     "lang_heading": "Zu l\u00f6schende VM-Versionen",
+    "lang_hidden": "Versteckt",
     "lang_host": "Host",
     "lang_image": "VM",
     "lang_lastEditor": "Zuletzt bearbeitet von",
@@ -60,12 +62,14 @@
     "lang_maxLectureVisibility": "Sp\u00e4testes Enddatum einer Veranstaltung (Tage in der Zukunft)",
     "lang_maxLocationsPerLecture": "Max. explizite Orte pro Veranstaltung",
     "lang_maxTransfers": "Maximale Zahl gleichzeitiger Up-\/Downloads pro Benutzer",
+    "lang_minimized": "Minimiert",
     "lang_miscOptions": "Verschiedene Einstellungen",
     "lang_modified": "Modifiziert",
     "lang_name": "Name",
     "lang_networkshares": "Netzlaufwerke",
     "lang_networksharesIntro": "Hier k\u00f6nnen Sie vordefinierte Netzlaufwerke anlegen, die den Nutzern der bwLehrpool-Suite zur Auswahl gestellt werden. Es ist den Nutzern der bwLehrpool-Suite weiterhin m\u00f6glich, komplett eigene Netzwerkfreigaben zu definieren. Die Angaben hier sollen lediglich das Hinzuf\u00fcgen h\u00e4ufig genutzter Laufwerke vereinfachen, bzw. das \u00c4ndern eines Netzwerkpfades vereinfachen, da in diesem Fall nur der Zentrale Eintrag hier angepasst werden muss, und nicht mehr wie zuvor jede Veranstaltung einzeln.",
     "lang_none": "(Keiner)",
+    "lang_normal": "Normal",
     "lang_organization": "Einrichtung",
     "lang_organizationListHeader": "Nutzungsrechte f\u00fcr den Satelliten festlegen",
     "lang_os": "Betriebssystem",
@@ -78,8 +82,22 @@
     "lang_reallyResetTemplates": "Sind Sie sicher, dass Sie alle Texte l\u00f6schen und auf die Standardwerte zur\u00fccksetzen wollen?",
     "lang_replaceWithOriginal": "Originaltext in Textbox laden",
     "lang_replyTo": "Reply-To Adresse",
+    "lang_runScriptAdd": "Script hinzuf\u00fcgen",
+    "lang_runScriptDeleteConfirmation": "Script wirklich l\u00f6schen?",
     "lang_runtimeConfig": "Laufzeit-Konfiguration",
     "lang_runtimeConfigLimits": "Beschr\u00e4nkungen",
+    "lang_scriptContent": "Scriptinhalt",
+    "lang_scriptExtension": "Dateinamenerweiterung",
+    "lang_scriptExtensionHead": "Erweiterung",
+    "lang_scriptIsGlobal": "Script ist global, wird in jeder Veranstaltung ausgef\u00fchrt",
+    "lang_scriptIsGlobalHead": "Global",
+    "lang_scriptIsPredefined": "Script ist ein vordefiniertes Script, das in der bwLehrpool-Suite zur Auswahl steht",
+    "lang_scriptPassCredentials": "Benutzername\/Passwort an dieses Script \u00fcbergeben",
+    "lang_scriptPassCredentialsHead": "User\/Pass",
+    "lang_scriptVisibility": "Anzeigemodus",
+    "lang_scriptVisibilityHead": "Anzeige",
+    "lang_scriptsHead": "Startscripte f\u00fcr Virtuelle Umgebungen",
+    "lang_scriptsIntro": "Hier k\u00f6nnen Sie Startskripte definieren, die entweder global bei jedem Start einer Veranstaltung ausgef\u00fchrt werden, oder den Nutzerinnen der bwLehrpool-Suite zur Vorauswahl zur Verf\u00fcgung gestellt werden.",
     "lang_senderAddress": "Absenderadresse",
     "lang_senderName": "Absender Anzeigename",
     "lang_shareDeleteConfirm": "Willst du dieses Netzlaufwerk wirklich l\u00f6schen?",
