--- a/modules-available/dozmod/lang/de/permissions.json
+++ b/modules-available/dozmod/lang/de/permissions.json
@@ -6,6 +6,8 @@
     "mailconfig.save": "\u00c4nderungen an der SMTP-Konfiguration zum Versenden von Mails speichern.",
     "networkshares.save": "Netzlaufwerke einsehen.",
     "networkshares.view": "\u00c4nderungen an den Netzlaufwerken speichern.",
+    "runscripts.save": "Startkripte erstellen\/bearbeiten",
+    "runscripts.view": "Startscripte auflisten",
     "runtimeconfig.save": "\u00c4nderungen an der Laufzeit-Konfiguration speichern.",
     "templates.reset": "E-Mail Templates zur\u00fccksetzen.",
     "templates.save": "E-Mail Templates speichern.",
