[dozmod] Update translations

--- a/modules-available/dozmod/lang/de/template-tags.json
+++ b/modules-available/dozmod/lang/de/template-tags.json
@@ -41,15 +41,15 @@
     "lang_lastEditor": "Zuletzt bearbeitet von",
     "lang_lastLogin": "Letzte Anmeldung",
     "lang_latestVersion": "Neuste Version",
-    "lang_ldapFilterAdd": "LDAP Filter Hinzuf\u00fcgen",
+    "lang_ldapFilterAdd": "LDAP-Filter hinzuf\u00fcgen",
     "lang_ldapFilterAttribute": "Attribut",
-    "lang_ldapFilterDeleteConfirmation": "Willst du diesen LDAP Filter wirklich L\u00f6schen.",
+    "lang_ldapFilterDeleteConfirmation": "Wollen Sie diesen LDAP-Filter wirklich l\u00f6schen?",
     "lang_ldapFilterDescription": "Dies sind die Filter, die ein Benutzer in der bwLehrpool-Suite Veranstaltungen hinzuf\u00fcgen kann.",
-    "lang_ldapFilterEdit": "LDAP Filter bearbeiten",
+    "lang_ldapFilterEdit": "LDAP-Filter bearbeiten",
     "lang_ldapFilterName": "Filtername",
     "lang_ldapFilterValue": "Wert",
-    "lang_ldapfilters": "LDAP Filter",
-    "lang_ldapfiltersIntro": "Hier k\u00f6nnen Sie Vorgaben f\u00fcr die Veranstaltungsspezifischen LDAP-Filter machen. LDAP-Filter sind einfache Attributsfilter, die clientseitig Anwendung finden. Die hier definierten Filter werden in der bwLehrpool-Suite als Vorschl\u00e4ge aufgelistet und k\u00f6nnen mittels Checkbox aktiviert werden. Alternativ k\u00f6nnen in der bwLehrpool-Suite auch eigene Filter angelegt werden.",
+    "lang_ldapfilters": "LDAP-Filter",
+    "lang_ldapfiltersIntro": "Hier k\u00f6nnen Sie Vorgaben f\u00fcr veranstaltungsspezifische LDAP-Filter machen. LDAP-Filter sind einfache Attributsfilter, die clientseitig Anwendung finden. Die hier definierten Filter werden in der bwLehrpool-Suite als Vorschl\u00e4ge aufgelistet und k\u00f6nnen mittels Checkbox aktiviert werden. Alternativ k\u00f6nnen in der bwLehrpool-Suite auch eigene Filter angelegt werden.",
     "lang_lecture": "Veranstaltung",
     "lang_lecturePermissionAdmin": "Administration",
     "lang_lecturePermissionEdit": "Bearbeiten",
@@ -74,7 +74,7 @@
     "lang_organizationListHeader": "Nutzungsrechte f\u00fcr den Satelliten festlegen",
     "lang_os": "Betriebssystem",
     "lang_owner": "Besitzer",
-    "lang_passwordplaceholder": "SMTP Passwort",
+    "lang_passwordplaceholder": "SMTP-Passwort",
     "lang_path": "Pfad",
     "lang_placeholders": "Platzhalter",
     "lang_port": "Port",
@@ -82,25 +82,25 @@
     "lang_reallyResetTemplates": "Sind Sie sicher, dass Sie alle Texte l\u00f6schen und auf die Standardwerte zur\u00fccksetzen wollen?",
     "lang_replaceWithOriginal": "Originaltext in Textbox laden",
     "lang_replyTo": "Reply-To Adresse",
-    "lang_runScriptAdd": "Script hinzuf\u00fcgen",
-    "lang_runScriptDeleteConfirmation": "Script wirklich l\u00f6schen?",
+    "lang_runScriptAdd": "Skript hinzuf\u00fcgen",
+    "lang_runScriptDeleteConfirmation": "Skript wirklich l\u00f6schen?",
     "lang_runtimeConfig": "Laufzeit-Konfiguration",
     "lang_runtimeConfigLimits": "Beschr\u00e4nkungen",
-    "lang_scriptContent": "Scriptinhalt",
+    "lang_scriptContent": "Skriptinhalt",
     "lang_scriptExtension": "Dateinamenerweiterung",
     "lang_scriptExtensionHead": "Erweiterung",
-    "lang_scriptIsGlobal": "Script ist global, wird in jeder Veranstaltung ausgef\u00fchrt",
+    "lang_scriptIsGlobal": "Skript ist global, wird in jeder Veranstaltung ausgef\u00fchrt",
     "lang_scriptIsGlobalHead": "Global",
-    "lang_scriptIsPredefined": "Script ist ein vordefiniertes Script, das in der bwLehrpool-Suite zur Auswahl steht",
-    "lang_scriptPassCredentials": "Benutzername\/Passwort an dieses Script \u00fcbergeben",
+    "lang_scriptIsPredefined": "Skript ist ein vordefiniertes Skript, das in der bwLehrpool-Suite zur Auswahl steht",
+    "lang_scriptPassCredentials": "Benutzername\/Passwort an dieses Skript \u00fcbergeben",
     "lang_scriptPassCredentialsHead": "User\/Pass",
     "lang_scriptVisibility": "Anzeigemodus",
     "lang_scriptVisibilityHead": "Anzeige",
-    "lang_scriptsHead": "Startscripte f\u00fcr Virtuelle Umgebungen",
+    "lang_scriptsHead": "Startskripte f\u00fcr Virtuelle Umgebungen",
     "lang_scriptsIntro": "Hier k\u00f6nnen Sie Startskripte definieren, die entweder global bei jedem Start einer Veranstaltung ausgef\u00fchrt werden, oder den Nutzerinnen der bwLehrpool-Suite zur Vorauswahl zur Verf\u00fcgung gestellt werden.",
     "lang_senderAddress": "Absenderadresse",
     "lang_senderName": "Absender Anzeigename",
-    "lang_shareDeleteConfirm": "Willst du dieses Netzlaufwerk wirklich l\u00f6schen?",
+    "lang_shareDeleteConfirm": "Wollen Sie dieses Netzlaufwerk wirklich l\u00f6schen?",
     "lang_size": "Gr\u00f6\u00dfe",
     "lang_spaceWastedDuplication": "Potentiell durch mehrfach vorkommende Bl\u00f6cke belegter Speicherplatz",
     "lang_specificUser": "Spezifischer Nutzer",
@@ -122,7 +122,7 @@
     "lang_userId": "Benutzer-ID",
     "lang_userListDescription": "Hier k\u00f6nnen Sie individuelle Nutzer zu \"Super-Usern\" machen. Diese haben in der bwLehrpool-Suite auf alle Veranstaltungen und VMs Vollzugriff, unabh\u00e4ngig von den gesetzten Berechtigungen. Au\u00dferdem k\u00f6nnen Sie hier Benutzer vom Zugriff mittels der bwLehrpool-Suite ausschlie\u00dfen.",
     "lang_userListHeader": "Dem Satelliten bekannte Benutzer",
-    "lang_usernameplaceholder": "SMTP Benutzername",
+    "lang_usernameplaceholder": "SMTP-Benutzername",
     "lang_version": "Version vom",
     "lang_when": "Wann"
 }
